--- a/style/main.css
+++ b/style/main.css
@@ -67,7 +67,6 @@ a {
 .header_box > .container > h1 {
   float: left;
   width: 30%;
-  /* margin-right: 15%; */
 }
 .header_box > .container > h1 > a {
   display: block;
@@ -108,10 +107,9 @@ a {
 .main_menu > li > a:hover {
   box-sizing: border-box;
   color: #1756c2;
-  /* border-bottom: 2px solid #1756c2; */
   text-decoration: underline;
 }
-.main_menu > li > a.on {
+/* .main_menu > li > a.on {
   box-sizing: border-box;
   color: #1756c2;
   text-decoration: underline;
@@ -128,7 +126,7 @@ a {
   left: 50%;
   bottom: 9px;
   margin-left: -7px;
-}
+} */
 .submenu {
   display: none;
   width: 100%;
@@ -172,7 +170,7 @@ a {
   width: 25%;
   float: right;
   height: 300px;
-  background: url(/img/banner_etc.jpg) 100% no-repeat;
+  background: url(../img/banner_etc.jpg) 100% no-repeat;
   background-size: cover;
   overflow: hidden;
   border-radius: 15px;
@@ -184,8 +182,6 @@ a {
 }
 .etc_wrap {
   height: 300px;
-  background: url(/img/banner_etc.jpg) 100% no-repeat;
-  background-size: cover;
   overflow: hidden;
   border-radius: 15px;
   color: #fff;
@@ -209,12 +205,16 @@ ul.etc_con_list > li:last-child {
   width: 40%;
 }
 .etc_foot {
-  padding: 22px 10px;
+  padding: 18px 10px;
   margin-top: 20px;
   text-align: center;
+  background-color: #021c4c;
 }
 .etc_foot > p {
   font-size: 14px;
+}
+.etc_foot > p > br {
+  display: none;
 }
 span.fcy {
   color: yellow;
@@ -284,13 +284,14 @@ span.round {
 .notice_wrap {
   padding: 20px;
 }
+.notice_wrap.on {
+  opacity: 0.6;
+  transform: scale(0.96) translateY(-20px);
+}
 .img_tit {
   padding-right: 5px;
   position: relative;
   top: 3px;
-}
-.content_1 {
-  height: 295px;
 }
 .notice {
   width: 70%;
@@ -334,9 +335,12 @@ span.round {
   text-align: right;
   color: #aaa;
 }
+.tab_menu {
+  display: flex;
+  justify-content: flex-start;
+}
 .tab_menu > li {
-  float: left;
-  width: 10%;
+  padding-left: 20px;
 }
 .tab_menu > li > a {
   font-size: 18px;
@@ -350,10 +354,23 @@ span.round {
   color: #1756c2;
   border-bottom: 2px solid #1756c2;
 }
+.notification {
+  padding: 20px;
+}
+.notification.on {
+  opacity: 0.6;
+  transform: scale(0.96) translateY(-20px);
+}
+.h2news {
+  padding: 20px;
+}
+.h2news.on {
+  opacity: 0.6;
+  transform: scale(0.96) translateY(-20px);
+}
 .schedule {
   width: 25%;
   float: left;
-  /* background: red; */
 }
 .schedule > h2 {
   font-size: 18px;
@@ -364,7 +381,7 @@ span.round {
   margin-top: 30px;
 }
 .cont_con {
-  font-size: 13px;
+  font-size: 14px;
   padding: 10px;
   font-weight: 600;
 }
@@ -404,7 +421,6 @@ span.round {
 .video {
   width: 25%;
   float: left;
-  /* background: red; */
 }
 .video > h2 {
   font-size: 18px;
@@ -460,8 +476,51 @@ footer {
   color: #444;
   font-weight: 600;
 }
-
-@media (max-width: 1023px) {
+/* @media screen and (max-width: 1200px) and (min-width: 900px) { */
+@media screen and (max-width: 1199px) {
+  body {
+    position: relative;
+  }
+  body.on::before {
+    position: absolute;
+    top: 80px;
+    left: 0;
+    background-color: #666;
+    opacity: 0.5;
+    width: 100%;
+    height: 100%;
+    content: "";
+    display: block;
+    z-index: 20;
+  }
+  header {
+    position: relative;
+    z-index: 50;
+  }
+  .header_box > .container > nav {
+    border-bottom-right-radius: 16px;
+    border-bottom-left-radius: 16px;
+    overflow: hidden;
+  }
+  .submenu {
+    border: none;
+    border-radius: 0;
+  }
+  .main_menu {
+    box-sizing: border-box;
+    border: 1px solid #1756c2;
+    border-top: none;
+  }
+  .main_menu > li > a:hover {
+    color: #fff;
+    text-decoration: none;
+    background-color: #1756c2;
+  }
+  .main_menu > li > a.on {
+    background-color: #013a9c;
+    color: #fff;
+    text-decoration: none;
+  }
   .menu-trigger {
     margin-right: 30px;
     margin-bottom: 25px;
@@ -501,9 +560,6 @@ footer {
   .menu-trigger span:nth-of-type(3) {
     bottom: 0;
   }
-
-  /* type-04 */
-  /* 메뉴 전체가 회전하면서 엑스자 버튼 만들기 #2 */
   .menu-trigger span.nthtype-04,
   .menu-trigger.active-4 span:nth-of-type(3) {
     transition: none;
@@ -536,21 +592,31 @@ footer {
   }
 
   .header_wrap {
-    display: none;
+    height: 0;
+  }
+  .header_box > .container {
+    position: relative;
+    z-index: 100;
   }
   .login_bar {
-    width: 100%;
-    background: red;
-    display: block;
+    width: 280px;
+    background: #444;
+    display: none;
+    position: absolute;
+    top: 80px;
+    right: 0;
+    z-index: 17;
   }
   .login_bar > li {
     width: 50%;
     box-sizing: border-box;
     height: 40px;
     line-height: 40px;
+    text-align: center;
   }
   .login_bar > li:last-child {
     margin-left: 0px;
+    border-left: 1px solid #fff;
   }
   .login_bar > li > a {
     font-size: 13px;
@@ -566,11 +632,17 @@ footer {
     width: 280px;
     position: absolute;
     background: #fff;
+    top: 120px;
     right: 0;
     z-index: 111;
   }
   .container > nav > ul.main_menu > li {
     width: 100%;
+    border-bottom: 1px solid #8aa6d6;
+    box-sizing: border-box;
+  }
+  .container > nav > ul.main_menu > li:last-child {
+    border-bottom: none;
   }
   .main_menu > li > a {
     font-size: 15px;
@@ -579,8 +651,174 @@ footer {
   }
   .submenu {
     position: static;
+    box-sizing: border-box;
   }
   .submenu > li > a {
     font-size: 13px;
+  }
+  .slide_wrap {
+    padding: 0 40px;
+  }
+  .banner {
+    width: 100%;
+    box-sizing: border-box;
+    padding: 20px;
+    float: none;
+  }
+  .banner img {
+    background-size: cover;
+  }
+  .etc {
+    width: 100%;
+    float: none;
+    margin-top: 20px;
+  }
+  .etc_wrap {
+    object-fit: cover;
+  }
+  .content_1 {
+    padding: 0 40px;
+  }
+  .schedule {
+    margin-top: 10px;
+  }
+  .content_2 {
+    padding: 0 40px;
+  }
+  .gallery {
+    width: 73%;
+    margin-right: 2%;
+  }
+  .cont_con > br:first-child {
+    display: none;
+  }
+  .cont_img {
+    background-position: center;
+  }
+}
+@media screen and (max-width: 899px) {
+  .notice {
+    width: 100%;
+    float: none;
+  }
+  .notice_tit {
+    padding-bottom: 10px;
+  }
+  .notice_con {
+    padding: 6px;
+  }
+  .notice_day {
+    padding: 8px;
+    font-size: 14px;
+  }
+  .notice_con > h2 {
+    font-size: 16px;
+  }
+  .notice_desc table {
+    margin-top: 10px;
+    font-size: 14px;
+  }
+  .schedule {
+    width: 100%;
+    float: none;
+  }
+  .content_2 {
+    padding: 0 40px;
+  }
+  .gallery {
+    width: 100%;
+    float: none;
+  }
+  .cont_con > br:first-child {
+    display: none;
+  }
+
+  .video {
+    width: 100%;
+    float: none;
+    margin-top: 10px;
+  }
+  .video_box img {
+    transform: scale(0.9);
+  }
+  .video_box:hover img {
+    transform: scale(1);
+    transition: ease-in-out 1s;
+    background-color: #9c9c9d;
+  }
+}
+@media screen and (max-width: 599px) {
+  .tit_f {
+    font-size: 18px;
+  }
+  .header_box > .container > h1 > a > img {
+    width: 32px;
+    position: relative;
+    top: 12px;
+  }
+  .tab_menu > li {
+    padding-left: 10px;
+  }
+  .gallery_box {
+    box-sizing: border-box;
+    width: 100%;
+    border: 2px solid #dadadb;
+    border-radius: 15px;
+    float: none;
+    overflow: hidden;
+  }
+  .cont_img {
+    padding-top: 160px;
+    background: url(../img/eximg.jpg) no-repeat bottom;
+    background-size: cover;
+  }
+  .gallery_box:nth-child(2) {
+    margin: 10px 0;
+  }
+  .etc {
+    height: 230px;
+  }
+  .etc_head {
+    padding: 12px 15px;
+  }
+  .etc_head > p {
+    font-size: 20px;
+  }
+  .etc_con {
+    font-size: 14px;
+    padding: 0 15px;
+  }
+  ul.etc_con_list > li {
+    width: 60%;
+    float: left;
+  }
+  ul.etc_con_list > li:last-child {
+    text-align: right;
+    width: 40%;
+  }
+  .etc_foot {
+    padding: 8px 10px;
+    margin-top: 5px;
+  }
+  .etc_foot > p {
+    font-size: 12px;
+    line-height: 20px;
+  }
+  .etc_foot > p > br {
+    display: block;
+  }
+  span.fcy.fs {
+    font-size: 20px;
+  }
+  span.round {
+    padding: 1px 3px;
+  }
+  footer {
+    margin-top: 40px;
+    text-align: left;
+    padding: 10px 28px;
+  }
+  .footer_box > h1 {
+    margin-top: 0;
   }
 }
